--- a/connect4.css
+++ b/connect4.css
@@ -4,6 +4,8 @@
   width: 50px;
   height: 50px;
   border: solid 1px #666;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* pieces are div within game table cells: draw as colored circles */
@@ -15,13 +17,6 @@
   border-radius: 50%;
 }
 
-.piece.p1 {
-  background-color: red;
-}
-
-.piece.p2 {
-  background-color: blue;
-}
 
 /* column-top is table row of clickable areas for each column */
 
